# python-clean-arch

./: README.md  pyproject.toml
src/: db.py  domain.py  repository.py  use_cases.py
tests/: test_domain.py  test_use_cases.py
